--- a/test.htm
+++ b/test.htm
@@ -5,3 +5,15 @@
 
 <title>環島一日遊全記錄</title>
 <p align="center" class="style4">【環島一日遊全記錄】<span class="style8">- 建豪 2007/07/30</span></p>
+
+<title>環島一日遊全記錄</title>
+<p align="center" class="style4">【環島一日遊全記錄】<span class="style8">- 建豪 2007/07/30</span></p>
+<p>&nbsp;</p>
+<p class="style6"><span class="style2">【<strong>緣起</strong>】</span></p>
+<p>　　話說一兩年前，偶然之間看到之前系上一位楊教授的個人網頁，內有他個人的小品文章，有一篇是提到教授個人曾於2003年9月完成此一壯舉，<a href="http://par.cse.nsysu.edu.tw/%7Ecbyang/article/data/island-trip0309.htm" target="_blank">全文在此</a>。不知道大家看完文章之後的感想是怎樣？有人會覺得這樣太累了；有人會覺得這根本就是瘋子；也有人會覺得這簡直只是浪費時間而已，一點意義都沒有。</p>
+<p>　　但是，也許是射手座的體內真的都有一股勇於冒險的基因吧，我看完網頁之後的感想是，哇！好讚阿！有機會我也要嘗試一下！於是乎，一顆瘋狂的種子，就這麼悄悄的植入我的心中。</p>
+<p>&nbsp;</p>
+<p><span class="style6"><span class="style2">【<strong>前言</strong>】</span></span></p>
+<p>　　但是想歸想，一直住在家裡的我，連平時都有門禁了(你沒看錯，身為一個大男生的我，居然有門禁，時間是ＰＭ10:30)，更別說要出門24小時不回家睡覺，那不是東方夜譚也不是西方夜譚，根本就是天方夜譚！！也因此，這顆瘋狂的種子，雖已經植入心中，但是卻永遠長不大阿！</p>
+<p> 　　然而，自從去年九月開始上台北唸書之後，似乎任何瘋狂的種子都可以開始灌溉施肥了。	不過，平日有跟在中研院當助研究員的學長一起做研究，所以平常日都要去中研院，沒去中研院的日子也要家教，假日不是跟朋友出去玩，就想要休息，要挑一個合適的時間出發，也有一定的困難度。</p>
+<p> 　　但是，這一兩個禮拜學長剛好出國，讓我可以偷閒一下，再加上上個禮拜一個大學同學坐火車環島一圈，對我來說，就像是將這顆種子灌上生長激素一樣，一下子長的跟大樹一樣高了！而且，最近不是有一句話很有名嗎？
