--- a/index.htm
+++ b/index.htm
@@ -1,5 +1,5 @@
 <title>環島一日遊全記錄</title>
-<p align="center" class="style4"><font size="5">【環島一日遊全記錄】<span class="style8">- 建豪 2007/07/30</span><font></p>
+<p align="center" class="style4"><font size="5">【環島一日遊全記錄】<span class="style8">- 建豪 2007/07/30</span></font></p>
 <p>&nbsp;</p>
 <p class="style6"><span class="style2">【<strong>緣起</strong>】</span></p>
 <p>　　話說一兩年前，偶然之間看到之前系上一位楊教授的個人網頁，內有他個人的小品文章，有一篇是提到教授個人曾於2003年9月完成此一壯舉，<a href="http://par.cse.nsysu.edu.tw/%7Ecbyang/article/data/island-trip0309.htm" target="_blank">全文在此</a>。不知道大家看完文章之後的感想是怎樣？有人會覺得這樣太累了；有人會覺得這根本就是瘋子；也有人會覺得這簡直只是浪費時間而已，一點意義都沒有。</p>
